--- a/play/index.html
+++ b/play/index.html
@@ -1,3 +1,18 @@
 <!DOCTYPE html>
 
 <h1>Unirse a un partida</h1>
+
+<input placeholder="introduzca el PIN">
+<input placeholder="introduzca su nombre">
+
+<button onclick="unirse()">UNIRSE</button>
+
+
+<script>
+    function unirse(){
+        fetch("https://dungee-23819-default-rtdb.europe-west1.firebasedatabase.app/", {
+            method: "POST",
+            body: `{'name':'manuel'}`
+        })
+    }
+</script>
