--- a/play/index.html
+++ b/play/index.html
@@ -10,7 +10,7 @@
 
 <script>
     function unirse(){
-        fetch("https://dungee-23819-default-rtdb.europe-west1.firebasedatabase.app/", {
+        fetch("https://dungee-23819-default-rtdb.europe-west1.firebasedatabase.app/jaja/jiji/user.json", {
             method: "POST",
             body: `{'name':'manuel'}`
         })
