--- a/play/index.html
+++ b/play/index.html
@@ -12,7 +12,7 @@
     function unirse(){
         fetch("https://dungee-23819-default-rtdb.europe-west1.firebasedatabase.app/jaja/jiji/user.json", {
             method: "POST",
-            body: `{'name':'manuel'}`
+            body: `{"name":"manuel"}`
         })
     }
 </script>
