--- a/play/index.html
+++ b/play/index.html
@@ -10,7 +10,7 @@
 
 <script>
     function unirse(){
-        fetch(`https://dungee-23819-default-rtdb.europe-west1.firebasedatabase.app/pin${pinel.value}/user.json`, {
+        fetch(`https://dungee-23819-default-rtdb.europe-west1.firebasedatabase.app/pin${pinel.value}/users...json`, {
             method: "POST",
             body: `{"name":"${userel.value}"}`
         })
