--- a/play/index.html
+++ b/play/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta charset="utf-8"/>
+<nav>
+    <a href="/start">Iniciar un juego nuevo</a>
+    <a href="/play">Unirse a una partida</a>
+</nav>
 
 <h1>Unirse a un partida</h1>
 
