--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<meta charset="utf-8"/>
+<nav>
+    <a href="/start">Iniciar un juego nuevo</a>
+    <a href="/play">Unirse a una partida</a>
+</nav>
 
 <h1>DUNGEE</h1>
 
 
-<a href="/start">Iniciar un juego nuevo</a>
-<a href="/play">Unirse a una partida</a>
