--- a/start/index.html
+++ b/start/index.html
@@ -18,6 +18,7 @@
         pin = Math.floor(Math.random()*10000);
 
         pinEl.innerText = pin;
+        setInterval(obtenerUsuarios, 3000);
     }
 
 
@@ -29,6 +30,6 @@
         })
     }
 
-    obtenerUsuarios();
+    
 </script>
 
