--- a/prueba.html
+++ b/prueba.html
@@ -14,6 +14,6 @@
     };
     for (const x in json.users)
     {
-      console.log(json.user.[x].name)
+      console.log(json.user[x].name)
     }
 </script>
