--- a/prueba.html
+++ b/prueba.html
@@ -1,19 +1,25 @@
+<p id="listaEl"></p>
+
 <script>
-    const json ={ 
-        "users":{
-            "-NkJoPY":{
+    const json = { 
+        "users": {
+            "-NkJoPY": {
                 "name":"gerard"
             },
-            "-NkJP":{
+            "-NkJP": {
                 "name":"JOTAPE"
             },
-            "-NkJole":{
+            "-NkJole": {
                 "name":"JOSEP"
             }
         }
     };
-    for (const x in json.users)
-    {
-      console.log(json.users[x].name)
+
+    let lista = "";
+
+    for (const x in json.users) {
+      lista = lista + json.users[x].name;
     }
+
+    listaEl.innerText
 </script>
