--- a/prueba.html
+++ b/prueba.html
@@ -19,7 +19,7 @@
 
     for (const x in json.users) {
 
-      lista = lista + json.users[x].name;
+      lista = lista + json.users[x].name +" ";
     }
 
     listaEl.innerText=lista;
