--- a/start/index.html
+++ b/start/index.html
@@ -10,7 +10,7 @@
 <button onclick="generarPIN()">CREAR PARTIDA</button>
 
 <p id="pinEl">PIN</p>
-
+<button>TODO LISTO</button>
 
 <script>
     let pin;
