--- a/start/index.html
+++ b/start/index.html
@@ -45,7 +45,7 @@
     {
         fetch(`https://dungee-v22.vercel.app/api/damelaquestions.js`)
         then (datos=>datos.json())
-        then (preguntas => console.log(preguntas)
+        then (questions => console.log(questions)
 
 
       
