--- a/start/index.html
+++ b/start/index.html
@@ -7,12 +7,12 @@
 
 <h1>Crear una partida nueva</h1>
 
-<button onclick="generarPIN()">CREAR PARTIDA</button>
+<button onClick="generarPIN()">CREAR PARTIDA</button>
 
 <p id="pinEl">PIN</p>
 <p id="listaEl"></p>
 
-<button onclick="mostrarPreguntas()">TODO LISTO</button>
+<button onClick="mostrarPreguntas()">TODO LISTO</button>
 
 
 
