--- a/start/index.html
+++ b/start/index.html
@@ -43,7 +43,7 @@
 
     function mostrarPreguntas()
     {
-        fetch(`https://dungee-v22.vercel.app/api/damelaquestions.js`)
+        fetch(`https://dungee-v22g.vercel.app/api/damelaquestions`)
         .then (datos=>datos.json())
         .then (questions => console.log(questions));
 
