--- a/prueba.html
+++ b/prueba.html
@@ -1,26 +1,38 @@
-<p id="listaEl"></p>
+<!DOCTYPE html>
+<p id="preguntasEl"></p>
 
 <script>
-    const json = { 
-        "users": {
-            "-NkJoPY": {
-                "name":"gerard"
+
+const questions = {
+        "preguntas": {
+            "pregunta0" : {
+                "pregunta": "2+2?",
+                "respuesta0": "4",
+                "respuesta1": "5",
+                "respuesta2": "2",
+                "respuesta3": "1",
+                "correcta": 0
             },
-            "-NkJP": {
-                "name":"JOTAPE"
+            "pregunta1" : {
+                "pregunta": "2+7?",
+                "respuesta0": "4",
+                "respuesta1": "5",
+                "respuesta2": "9",
+                "respuesta3": "1",
+                "correcta": 2
             },
-            "-NkJole": {
-                "name":"JOSEP"
-            }
+            "pregunta2" : {
+                "pregunta": "2+1?",
+                "respuesta0": "4",
+                "respuesta1": "3",
+                "respuesta2": "2",
+                "respuesta3": "1",
+                "correcta": 1
+            },
         }
-    };
-
-    let lista = "";
-
-    for (const x in json.users) {
-
-      lista = lista + json.users[x].name +" ";
     }
-
-    listaEl.innerText=lista;
+    for (const pregunta in questions.preguntas){
+        preguntasEL.innerText += questions.preguntas[pregunta].pregunta;
+        
+    }
 </script>
