--- a/prueba.html
+++ b/prueba.html
@@ -32,7 +32,7 @@ const questions = {
         }
     }
     for (const pregunta in questions.preguntas){
-        preguntasEL.innerText += questions.preguntas[pregunta].pregunta;
+        preguntasEl.innerText += questions.preguntas[pregunta].pregunta;
         
     }
 </script>
